// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostRecentEbooks tests should go to book details when clicking on a book 1`] = `
<MostRecentEbooks
  data={
    Object {
      "hits": Array [
        Object {
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Jack E. Davis",
              },
            ],
            "edition": "ed. 1",
            "eitems": Object {
              "hits": Array [
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "doc1",
                  "image_cover": "",
                  "image_size": "",
                  "onClick": [MockFunction],
                  "open_access": true,
                  "pid": "eitem1",
                  "title": "title1",
                },
              ],
              "total": 1,
            },
            "language": Array [
              "en",
            ],
            "pid": "123",
            "title": Object {
              "title": "The Gulf: The Making of An American Sea",
            },
          },
        },
        Object {
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Caroline Fraser",
              },
            ],
            "eitems": Object {
              "hits": Array [
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "doc2",
                  "image_cover": "",
                  "image_size": "",
                  "onClick": [MockFunction],
                  "open_access": false,
                  "pid": "eitem2",
                  "title": "title2",
                },
              ],
              "total": 1,
            },
            "language": Array [
              "it",
            ],
            "pid": "456",
            "title": Object {
              "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
            },
          },
        },
      ],
      "total": 2,
    }
  }
  fetchMostRecentEbooks={[Function]}
  maxItemsToDisplay={1}
>
  <Loader>
    <Error>
      <div>
        <Button
          as="button"
          content="See All"
          onClick={[Function]}
        >
          <button
            className="ui button"
            onClick={[Function]}
          >
            See All
          </button>
        </Button>
        <Divider
          hidden={true}
        >
          <div
            className="ui hidden divider"
          />
        </Divider>
        <CardGroup>
          <div
            className="ui cards"
          >
            <EbookCard
              ebookData={
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "123",
                  "imageCover": "https://assets.thalia.media/img/46276899-00-00.jpg",
                  "imageSize": "small",
                  "onClick": [Function],
                  "open_access": true,
                  "pid": "eitem1",
                  "title": "The Gulf: The Making of An American Sea",
                }
              }
              key="eitem1"
            >
              <Card
                data-test="eitem1"
                onClick={[Function]}
              >
                <a
                  className="ui card"
                  data-test="eitem1"
                  onClick={[Function]}
                >
                  <Image
                    as="img"
                    size="small"
                    src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    ui={true}
                  >
                    <img
                      className="ui small image"
                      src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    />
                  </Image>
                  <CardContent>
                    <div
                      className="content"
                    >
                      <CardHeader>
                        <div
                          className="header"
                        >
                          The Gulf: The Making of An American Sea
                        </div>
                      </CardHeader>
                    </div>
                  </CardContent>
                </a>
              </Card>
            </EbookCard>
            <EbookCard
              ebookData={
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "456",
                  "imageCover": "https://assets.thalia.media/img/46276899-00-00.jpg",
                  "imageSize": "small",
                  "onClick": [Function],
                  "open_access": false,
                  "pid": "eitem2",
                  "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
                }
              }
              key="eitem2"
            >
              <Card
                data-test="eitem2"
                onClick={[Function]}
              >
                <a
                  className="ui card"
                  data-test="eitem2"
                  onClick={[Function]}
                >
                  <Image
                    as="img"
                    size="small"
                    src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    ui={true}
                  >
                    <img
                      className="ui small image"
                      src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    />
                  </Image>
                  <CardContent>
                    <div
                      className="content"
                    >
                      <CardHeader>
                        <div
                          className="header"
                        >
                          Prairie Fires: The American Dreams of Laura Ingalls Wilder
                        </div>
                      </CardHeader>
                    </div>
                  </CardContent>
                </a>
              </Card>
            </EbookCard>
          </div>
        </CardGroup>
      </div>
    </Error>
  </Loader>
</MostRecentEbooks>
`;

exports[`MostRecentEbooks tests should load the most recent ebooks component 1`] = `
<Loader>
  <Error>
    <div>
      <Button
        as="button"
        content="See All"
        onClick={[Function]}
      />
      <Divider
        hidden={true}
      />
      <CardGroup />
    </div>
  </Error>
</Loader>
`;

exports[`MostRecentEbooks tests should render list of most recent ebooks 1`] = `
<MostRecentEbooks
  data={
    Object {
      "hits": Array [
        Object {
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Jack E. Davis",
              },
            ],
            "edition": "ed. 1",
            "eitems": Object {
              "hits": Array [
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "doc1",
                  "image_cover": "",
                  "image_size": "",
                  "onClick": [MockFunction],
                  "open_access": true,
                  "pid": "eitem1",
                  "title": "title1",
                },
              ],
              "total": 1,
            },
            "language": Array [
              "en",
            ],
            "pid": "123",
            "title": Object {
              "title": "The Gulf: The Making of An American Sea",
            },
          },
        },
        Object {
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Caroline Fraser",
              },
            ],
            "eitems": Object {
              "hits": Array [
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "doc2",
                  "image_cover": "",
                  "image_size": "",
                  "onClick": [MockFunction],
                  "open_access": false,
                  "pid": "eitem2",
                  "title": "title2",
                },
              ],
              "total": 1,
            },
            "language": Array [
              "it",
            ],
            "pid": "456",
            "title": Object {
              "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
            },
          },
        },
      ],
      "total": 2,
    }
  }
  fetchMostRecentEbooks={[Function]}
>
  <Loader>
    <Error>
      <div>
        <Button
          as="button"
          content="See All"
          onClick={[Function]}
        >
          <button
            className="ui button"
            onClick={[Function]}
          >
            See All
          </button>
        </Button>
        <Divider
          hidden={true}
        >
          <div
            className="ui hidden divider"
          />
        </Divider>
        <CardGroup>
          <div
            className="ui cards"
          >
            <EbookCard
              ebookData={
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "123",
                  "imageCover": "https://assets.thalia.media/img/46276899-00-00.jpg",
                  "imageSize": "small",
                  "onClick": [Function],
                  "open_access": true,
                  "pid": "eitem1",
                  "title": "The Gulf: The Making of An American Sea",
                }
              }
              key="eitem1"
            >
              <Card
                data-test="eitem1"
                onClick={[Function]}
              >
                <a
                  className="ui card"
                  data-test="eitem1"
                  onClick={[Function]}
                >
                  <Image
                    as="img"
                    size="small"
                    src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    ui={true}
                  >
                    <img
                      className="ui small image"
                      src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    />
                  </Image>
                  <CardContent>
                    <div
                      className="content"
                    >
                      <CardHeader>
                        <div
                          className="header"
                        >
                          The Gulf: The Making of An American Sea
                        </div>
                      </CardHeader>
                    </div>
                  </CardContent>
                </a>
              </Card>
            </EbookCard>
            <EbookCard
              ebookData={
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "456",
                  "imageCover": "https://assets.thalia.media/img/46276899-00-00.jpg",
                  "imageSize": "small",
                  "onClick": [Function],
                  "open_access": false,
                  "pid": "eitem2",
                  "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
                }
              }
              key="eitem2"
            >
              <Card
                data-test="eitem2"
                onClick={[Function]}
              >
                <a
                  className="ui card"
                  data-test="eitem2"
                  onClick={[Function]}
                >
                  <Image
                    as="img"
                    size="small"
                    src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    ui={true}
                  >
                    <img
                      className="ui small image"
                      src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    />
                  </Image>
                  <CardContent>
                    <div
                      className="content"
                    >
                      <CardHeader>
                        <div
                          className="header"
                        >
                          Prairie Fires: The American Dreams of Laura Ingalls Wilder
                        </div>
                      </CardHeader>
                    </div>
                  </CardContent>
                </a>
              </Card>
            </EbookCard>
          </div>
        </CardGroup>
      </div>
    </Error>
  </Loader>
</MostRecentEbooks>
`;

exports[`MostRecentEbooks tests should render the see all button when showing most recent ebooks 1`] = `
<MostRecentEbooks
  data={
    Object {
      "hits": Array [
        Object {
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Jack E. Davis",
              },
            ],
            "edition": "ed. 1",
            "eitems": Object {
              "hits": Array [
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "doc1",
                  "image_cover": "",
                  "image_size": "",
                  "onClick": [MockFunction],
                  "open_access": true,
                  "pid": "eitem1",
                  "title": "title1",
                },
              ],
              "total": 1,
            },
            "language": Array [
              "en",
            ],
            "pid": "123",
            "title": Object {
              "title": "The Gulf: The Making of An American Sea",
            },
          },
        },
        Object {
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Caroline Fraser",
              },
            ],
            "eitems": Object {
              "hits": Array [
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "doc2",
                  "image_cover": "",
                  "image_size": "",
                  "onClick": [MockFunction],
                  "open_access": false,
                  "pid": "eitem2",
                  "title": "title2",
                },
              ],
              "total": 1,
            },
            "language": Array [
              "it",
            ],
            "pid": "456",
            "title": Object {
              "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
            },
          },
        },
      ],
      "total": 2,
    }
  }
  fetchMostRecentEbooks={[Function]}
  maxItemsToDisplay={1}
>
  <Loader>
    <Error>
      <div>
        <Button
          as="button"
          content="See All"
          onClick={[Function]}
        >
          <button
            className="ui button"
            onClick={[Function]}
          >
            See All
          </button>
        </Button>
        <Divider
          hidden={true}
        >
          <div
            className="ui hidden divider"
          />
        </Divider>
        <CardGroup>
          <div
            className="ui cards"
          >
            <EbookCard
              ebookData={
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "123",
                  "imageCover": "https://assets.thalia.media/img/46276899-00-00.jpg",
                  "imageSize": "small",
                  "onClick": [Function],
                  "open_access": true,
                  "pid": "eitem1",
                  "title": "The Gulf: The Making of An American Sea",
                }
              }
              key="eitem1"
            >
              <Card
                data-test="eitem1"
                onClick={[Function]}
              >
                <a
                  className="ui card"
                  data-test="eitem1"
                  onClick={[Function]}
                >
                  <Image
                    as="img"
                    size="small"
                    src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    ui={true}
                  >
                    <img
                      className="ui small image"
                      src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    />
                  </Image>
                  <CardContent>
                    <div
                      className="content"
                    >
                      <CardHeader>
                        <div
                          className="header"
                        >
                          The Gulf: The Making of An American Sea
                        </div>
                      </CardHeader>
                    </div>
                  </CardContent>
                </a>
              </Card>
            </EbookCard>
            <EbookCard
              ebookData={
                Object {
                  "description": "Lorem ipsum",
                  "document_pid": "456",
                  "imageCover": "https://assets.thalia.media/img/46276899-00-00.jpg",
                  "imageSize": "small",
                  "onClick": [Function],
                  "open_access": false,
                  "pid": "eitem2",
                  "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
                }
              }
              key="eitem2"
            >
              <Card
                data-test="eitem2"
                onClick={[Function]}
              >
                <a
                  className="ui card"
                  data-test="eitem2"
                  onClick={[Function]}
                >
                  <Image
                    as="img"
                    size="small"
                    src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    ui={true}
                  >
                    <img
                      className="ui small image"
                      src="https://assets.thalia.media/img/46276899-00-00.jpg"
                    />
                  </Image>
                  <CardContent>
                    <div
                      className="content"
                    >
                      <CardHeader>
                        <div
                          className="header"
                        >
                          Prairie Fires: The American Dreams of Laura Ingalls Wilder
                        </div>
                      </CardHeader>
                    </div>
                  </CardContent>
                </a>
              </Card>
            </EbookCard>
          </div>
        </CardGroup>
      </div>
    </Error>
  </Loader>
</MostRecentEbooks>
`;
